grammar.js
/**
 * @file Kakscript grammar for tree-sitter
 * @license MIT
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: 'kakscript',

  // Order MUST match enum TokenType in scanner.c exactly.
  externals: $ => [
    $._percent_string_start,
    $._percent_string_end,
    $._bare_string_content,
    $._nonbalanced_string_start,
    $._nonbalanced_string_end,
    $._string_content_double,
    $._expansion_percent,
    $._expansion_delim_start,
    $._expansion_end,
    $._concat,
  ],

  // IMPORTANT: \n is NOT in extras — it's a terminator.
  // Only horizontal whitespace is auto-skipped.
  extras: $ => [
    /[ \t\r]/,
    $.comment,
  ],

  rules: {
    program: $ => seq(
      repeat($._terminator),
      optional($._statements),
    ),

    _statements: $ => seq(
      repeat(seq($._statement, $._terminator)),
      $._statement,
      optional($._terminator),
    ),

    _statement: $ => choice(
      $.try_statement,
      $.command,
    ),

    command: $ => seq(
      field('name', $.command_name),
      repeat(choice(
        $.switch,
        $.argument,
      )),
      optional(seq(
        $.switch_terminator,
        repeat($.argument),
      )),
    ),

    try_statement: $ => prec(1, seq(
      'try',
      field('body', $._block),
      repeat(seq(
        'catch',
        field('handler', $._block),
      )),
    )),

    _block: $ => choice(
      $.percent_string,
      $.single_quoted_string,
      $.double_quoted_string,
      $.expansion,
    ),

    switch: $ => prec.right(seq(
      token(seq('-', /[a-zA-Z][a-zA-Z0-9_-]*/)),
      optional(choice(
        $.single_quoted_string,
        $.double_quoted_string,
        $.expansion,
        $.percent_string,
      )),
    )),

    switch_terminator: $ => '--',

    command_name: $ => $.word,

    argument: $ => choice(
      $.expansion,
      $.single_quoted_string,
      $.percent_string,
      $.double_quoted_string,
      $.word,
    ),

    // --- Strings ---

    single_quoted_string: $ => seq(
      "'",
      optional($.string_content),
      "'",
    ),

    string_content: $ => repeat1(choice(
      /[^']+/,
      "''",
    )),

    double_quoted_string: $ => seq(
      '"',
      repeat(choice(
        alias($._string_content_double, $.string_content),
        $.expansion,
      )),
      '"',
    ),

    expansion: $ => seq(
      $._expansion_percent,
      field('type', $.expansion_type),
      choice(
        seq(
          $._expansion_delim_start,
          optional(field('content', alias($._bare_string_content, $.string_content))),
          choice($._percent_string_end, $._nonbalanced_string_end),
        ),
      ),
    ),

    expansion_type: $ => token.immediate(choice('val', 'opt', 'sh', 'reg', 'arg', 'file', 'exp')),

    percent_string: $ => choice(
      // Balanced: %{...} %[...] %<...> %(...)
      seq(
        $._percent_string_start,
        optional(field('content', alias($._bare_string_content, $.string_content))),
        $._percent_string_end,
      ),
      // Non-balanced: %|...| %/.../ etc.
      seq(
        $._nonbalanced_string_start,
        optional(field('content', alias($._bare_string_content, $.string_content))),
        $._nonbalanced_string_end,
      ),
    ),

    word: $ => /[^\s;#'%"]+/,

    comment: $ => seq('#', /.*/),

    _terminator: $ => choice(';', /\n/),
  },
});
