test/corpus/expansions.txt
==================
Val expansion
==================

info %val{bufname}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Opt expansion
==================

info %opt{indentwidth}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Shell expansion
==================

info %sh{date}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Reg expansion
==================

info %reg{a}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Arg expansion
==================

info %arg{0}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
File expansion
==================

info %file{/tmp/test}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Exp expansion
==================

info %exp{2+2}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Shell expansion with balanced braces
==================

info %sh{if [ true ]; then infohello; fi}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Expansion with non-balanced delimiter
==================

info %val|bufname|

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Expansion with bracket delimiter
==================

info %val[bufname]

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (expansion
        type: (expansion_type)
        content: (string_content)))))

==================
Block body with %% followed by opt in shell body
==================

define-command foo %{
    evaluate-commands %sh{
        printf 'set-register z %%opt%s\n' "$1"
    }
}

---

(program
  (define_command
    name: (command_name)
    body: (block_body
      (string_content)
      (expansion
        type: (expansion_type)
        content: (string_content))
      (string_content))))

==================
Expansion inside line comment is not an expansion
==================

define-command foo %{
    # we iterate %val{buflist} via the quoted form
    echo done
}

---

(program
  (define_command
    name: (command_name)
    body: (block_body
      (string_content))))
