test/corpus/hooks.txt
==================
Simple hook
==================

hook global WinCreate .* %{echo hello}

---

(program
  (hook_definition
    scope: (scope)
    name: (word)
    filter: (argument
      (word))
    body: (block_body
      (string_content))))

==================
Hook with group switch
==================

hook -group my-hooks global BufSetOption filetype=python %{echo py}

---

(program
  (hook_definition
    (switch
      (word))
    scope: (scope)
    name: (word)
    filter: (argument
      (word))
    body: (block_body
      (string_content))))

==================
Buffer scope hook
==================

hook buffer InsertChar \n %{echo newline}

---

(program
  (hook_definition
    scope: (scope)
    name: (word)
    filter: (argument
      (word))
    body: (block_body
      (string_content))))

==================
Hook with double-quoted string body
==================

hook global WinCreate .* "echo hello"

---

(program
  (hook_definition
    scope: (scope)
    name: (word)
    filter: (argument
      (word))
    body: (double_quoted_string
      (string_content))))

==================
Hook with single-quoted string body
==================

hook global WinCreate .* 'echo hello'

---

(program
  (hook_definition
    scope: (scope)
    name: (word)
    filter: (argument
      (word))
    body: (single_quoted_string
      (string_content))))
