test/corpus/programs.txt
==================
Real-world hook with group switch
==================

hook -group ini-highlight global WinSetOption filetype=ini %{
    add-highlighter window/ini ref ini
    hook -once -always window WinSetOption filetype=.* %{ remove-highlighter window/ini }
}

---

(program
  (hook_definition
    (switch
      (word))
    scope: (scope)
    name: (word)
    filter: (argument
      (word))
    body: (block_body
      (string_content))))

==================
Real-world define-command with switches after name
==================

define-command my-grep -params 1 -docstring "grep in project" %{
    echo hello
}

---

(program
  (define_command
    name: (command_name)
    (switch
      (word))
    (switch
      (double_quoted_string
        (string_content)))
    body: (block_body
      (string_content))))

==================
Blank lines between statements
==================

hook global BufCreate .* %{
    set-option buffer filetype kak
}

hook global WinSetOption filetype=kak %{
    require-module kak
}

---

(program
  (hook_definition
    scope: (scope)
    name: (word)
    filter: (argument
      (word))
    body: (block_body
      (string_content)))
  (hook_definition
    scope: (scope)
    name: (word)
    filter: (argument
      (word))
    body: (block_body
      (string_content))))

==================
Provide-module with override
==================

provide-module -override wren %{
    add-highlighter shared/wren regions
}

---

(program
  (provide_module
    (switch)
    name: (word)
    body: (block_body
      (string_content))))

==================
Define-command with hidden switch
==================

define-command -hidden file-detection %{
    evaluate-commands %sh{
        echo hello
    }
}

---

(program
  (define_command
    (switch)
    name: (command_name)
    body: (block_body
      (string_content)
      (expansion
        type: (expansion_type)
        content: (string_content))
      (string_content))))
