test/corpus/strings.txt
==================
Single quoted string
==================

echo 'hello world'

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (single_quoted_string
        (string_content)))))

==================
Single quoted string with escaped quote
==================

echo 'it''s fine'

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (single_quoted_string
        (string_content)))))

==================
Empty single quoted string
==================

echo ''

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (single_quoted_string))))

==================
Single quoted string preserves percent
==================

echo '%val{session}'

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (single_quoted_string
        (string_content)))))

==================
Bare percent string with braces
==================

echo %{hello world}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string
        content: (string_content)))))

==================
Nested bare percent string
==================

echo %{outer %{inner} end}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string
        content: (string_content)))))

==================
Bare percent string with brackets
==================

echo %[hello world]

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string
        content: (string_content)))))

==================
Bare percent string with angle brackets
==================

echo %<hello world>

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string
        content: (string_content)))))

==================
Bare percent string with parens
==================

echo %(hello world)

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string
        content: (string_content)))))

==================
Bare percent string preserves expansions literally
==================

echo %{%val{session}}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string
        content: (string_content)))))

==================
Non-balanced bare percent string
==================

echo %|hello world|

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string
        content: (string_content)))))

==================
Non-balanced bare percent string with slash
==================

echo %/hello world/

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string
        content: (string_content)))))

==================
Empty bare percent string
==================

echo %{}

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (percent_string))))

==================
Double quoted string
==================

echo "hello world"

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (double_quoted_string
        (string_content)))))

==================
Double quoted string with escaped quote
==================

echo "say ""hello"""

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (double_quoted_string
        (string_content)))))

==================
Empty double quoted string
==================

echo ""

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (double_quoted_string))))

==================
Double quoted string with expansion
==================

echo "buffer: %val{bufname}"

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (double_quoted_string
        (string_content)
        (expansion
          type: (expansion_type)
          content: (string_content))))))

==================
Double quoted string with shell expansion
==================

echo "date: %sh{date}"

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (double_quoted_string
        (string_content)
        (expansion
          type: (expansion_type)
          content: (string_content))))))

==================
Double quoted string with multiple expansions
==================

echo "%val{bufname}: %opt{filetype}"

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (double_quoted_string
        (expansion
          type: (expansion_type)
          content: (string_content))
        (string_content)
        (expansion
          type: (expansion_type)
          content: (string_content))))))

==================
Double quoted string with escaped percent
==================

echo "100%% done"

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (double_quoted_string
        (string_content)))))

==================
Double quoted string with expansion and trailing text
==================

echo "hello %val{name} world"

---

(program
  (command
    name: (command_name
      (word))
    (argument
      (double_quoted_string
        (string_content)
        (expansion
          type: (expansion_type)
          content: (string_content))
        (string_content)))))
